# lambda-rust

./: .gitignore  Cargo.toml  README.md  build.sh  package.json  serverless.yaml
src/: main.rs
