[package]
name = "lambda-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.8.0" # AWS Lambda runtimr
tokio = "1.28.0"      # For async Networking
serde = "1.0.160"     # For JSON
serde_json = "1.0.108"
